# drone-dust-monitoring

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  device_setup.c  device_setup.h  main.c  sdkconfig  sdkconfig.old
boards/: board.h  board_esp32_dev_module.h
components/mavlink/: CMakeLists.txt
doc/: BBB_UART_Guide.md  setup_uart_on_bbb.md
inc/: ads1115.h  gp2y1010au0f.h  pms7003.h
main/: CMakeLists.txt  device_setup.c  device_setup.h  main.c
main/dust_sensor/: dust_sensor.c  dust_sensor.h
main/fsm/: fsm.c
main/gps/: gps.c  gps.h
main/mavlink_manager/: mavlink_manager.c  mavlink_manager.h
main/modem/: modem_common.h
main/modem/at/: at.c  at.h
main/modem/fsm/: fsm_manager.c  fsm_manager.h  http_fsm.c  http_fsm.h  mqtt_fsm.c  mqtt_fsm.h  sim_fsm.c  sim_fsm.h  transport_config_template.h
main/modem/service/: http_service.c  http_service.h  mqtt_service.c  mqtt_service.h  sim_service.c  sim_service.h
main/payload/: payload.c  payload.h
main/sim/: at.c  at.h  sim.c  sim.h  sim_cmd.c  sim_cmd.h
scripts/: drone.service  setup_service.sh
src/: ads1115.c  device_setup.c  device_setup.h  gp2y1010au0f.c  main.c  pms7003.c
src/drivers/: log.h  uart.c  uart.h
src/dust_sensor/: dust_sensor.c  dust_sensor.h  pms7003.c
src/fsm/: fsm.c
src/gps/: gps.c  gps.h
src/sim/: at_cmd.c  at_cmd.h  mqtt.c  mqtt.h  sim.c  sim.h  sim_cmd.c  sim_cmd.h
src/transport/: http.c  http.h  transport_config_template.h
sys/: json.c  json.h  log.h  ringbuffer.c  ringbuffer.h
