idf_component_register(
    SRCS 
        "main.c"
        "device_setup.c"
        "dust_sensor/dust_sensor.c"
        "gps/gps.c"
        "modem/at/at.c"
        "modem/service/sim_service.c"
        "modem/service/http_service.c"
        "modem/service/mqtt_service.c"
        "modem/fsm/sim_fsm.c"
        "modem/fsm/fsm_manager.c"
    INCLUDE_DIRS 
        "."
        "../boards"
        "dust_sensor"
        "gps"
        "modem"
        "modem/at"
        "modem/service"
        "modem/fsm"
    )
